--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,18 @@
 <resources>
-    <string name="app_name" translatable="false">My App</string>
-    <string name="text_love_android">I love Android</string>
-    <string name="text_switch">Switch on/off</string>
-    <string name="text_press_button">Press Me</string>
-    <string name="text_check_this_out">Check this out!</string>
-    <string name="hint_edit_text">I love Android</string>
+    <string name="enter_your_name">Lab 3</string>
+    <string name="enter_name_hint">Your Name</string>
+    <string name="next_button">Next</string>
+    <string name="welcome_message_placeholder">Welcome %s!</string>
+    <string name="thank_you_button">Thank You</string>
+    <string name="dont_call_me_button">Dont call me that</string>
+    <string name="app_name" translatable="false" />
+    <string name="welcome_message">Welcome %s!</string>
+
+
     <string name="next">Next</string>
     <string name="lorem_ipsum">Lorem Ipsum</string>
     <string name="previous">Previous</string>
     <string name="action_settings">Settings</string>
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
-    <string name="toast_message" />
 </resources>
