--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,10 @@
 <resources>
-    <string name="enter_your_name">Lab 3</string>
-    <string name="enter_name_hint">Your Name</string>
-    <string name="next_button">Next</string>
-    <string name="welcome_message_placeholder">Welcome %s!</string>
-    <string name="thank_you_button">Thank You</string>
-    <string name="dont_call_me_button">Dont call me that</string>
-    <string name="app_name" translatable="false" />
-    <string name="welcome_message">Welcome %s!</string>
 
-
+    <string name="app_name">My To-Do App</string>
+    <string name="hint_todo">Type Here</string>
+    <string name="button_add">Add</string>
+    <string name="switch_urgent">Urgent</string>
+    <string name="delete_confirmation_title">Do you want to delete this?</string>
     <string name="next">Next</string>
     <string name="lorem_ipsum">Lorem Ipsum</string>
     <string name="previous">Previous</string>
