--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,12 @@
 <resources>
 
-    <string name="app_name">Lab 6</string>
-    <string name="hint_todo">Type Here</string>
-    <string name="button_add">Add</string>
-    <string name="switch_urgent">Urgent</string>
-    <string name="delete_confirmation_title">Do you want to delete this?</string>
-    <string name="next">Next</string>
+    <string name="app_name">Lab 7</string>
+
     <string name="lorem_ipsum">Lorem Ipsum</string>
     <string name="previous">Previous</string>
     <string name="action_settings">Settings</string>
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
