--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Mon application de liste de tâches</string>
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+
     <string name="lorem_ipsum">Lorem Ipsum</string>
+    <string name="drawer_open">Open drawer</string>
+    <string name="drawer_close">Close drawer</string>
     <string name="previous">Précédent</string>
     <string name="action_settings">Paramètres</string>
     <string name="first_fragment_label">Premier Fragment</string>
     <string name="second_fragment_label">Deuxième Fragment</string>
 
 
-</resources>
+
+        <string-array name="navigation_items">
+            <item>Home</item>
+            <item>Dad Joke</item>
+            <item>Exit</item>
+        </string-array>
+    </resources>
 
