--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,22 @@
 <resources>
 
-    <string name="app_name">Lab 7</string>
+    <string name="app_name">Lab 8</string>
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
 
+    <string name="drawer_open">Open drawer</string>
+    <string name="drawer_close">Close drawer</string>
     <string name="lorem_ipsum">Lorem Ipsum</string>
     <string name="previous">Previous</string>
     <string name="action_settings">Settings</string>
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
+<string-array name="navigation_items">
+    <item>Home</item>
+    <item>Dad Joke</item>
+    <item>Exit</item>
+</string-array>
 </resources>
